--- a/docker-compose-files/elasticsearch-kibana-filebeat/elasticsearch/Dockerfile
+++ b/docker-compose-files/elasticsearch-kibana-filebeat/elasticsearch/Dockerfile
@@ -5,3 +5,5 @@ FROM docker.elastic.co/elasticsearch/elasticsearch:${EFK_VERSION}
 
 # Add your elasticsearch plugins setup here
 # Example: RUN elasticsearch-plugin install analysis-icu
+# RUN curl -L -O https://artifacts.elastic.co/downloads/beats/metricbeat/metricbeat-7.5.1-x86_64.rpm; rpm -vi metricbeat-7.5.1-x86_64.rpm
+# RUN 
