refactor: No living connections error

--- a/docker-compose-files/elasticsearch-kibana-filebeat/filebeat/Dockerfile
+++ b/docker-compose-files/elasticsearch-kibana-filebeat/filebeat/Dockerfile
@@ -2,4 +2,8 @@ ARG EFK_VERSION
 
 FROM docker.elastic.co/beats/filebeat:${EFK_VERSION}
 
-# COPY ./config/filebeat.yml 
+USER root
+
+COPY ./config/filebeat.yml /usr/share/filebeat/
+RUN chown root. /usr/share/filebeat/filebeat.yml
+RUN chmod go-w /usr/share/filebeat/filebeat.yml
