--- a/docker-compose-files/elasticsearch-kibana-filebeat/.env
+++ b/docker-compose-files/elasticsearch-kibana-filebeat/.env
@@ -2,3 +2,10 @@ COMPOSE_PROJECT_NAME=efk
 CREATED_IMAGE_NAME_PREFIX=efk
 
 EFK_VERSION=7.5.1
+KIBANA_PORT=5601
+KIBANA_EXPOSED_PORT=5601
+
+ELASTIC_PORT1=9200
+ELASTIC_PORT2=9300
+ELASTIC_EXPOSED_PORT1=9200
+ELASTIC_EXPOSED_PORT2=9300
