--- a/docker-compose-files/elasticsearch-kibana-filebeat/docker-compose.yml
+++ b/docker-compose-files/elasticsearch-kibana-filebeat/docker-compose.yml
@@ -7,41 +7,49 @@ services:
       context: ./elasticsearch
       args:
         EFK_VERSION: $EFK_VERSION
+        ELASTIC_PORT1: $ELASTIC_PORT1
+        ELASTIC_PORT2: $ELASTIC_PORT2
     environment:
+      node.name: node
+      cluster.name: elasticsearch-default
       ES_JAVA_OPTS: -Xms1g -Xmx1g
       discovery.type: single-node
       ELASTIC_PASSWORD: changeme
     hostname: elasticsearch
     ports:
-      - "9200:9200"
-      - "9300:9300"
+      - "${ELASTIC_EXPOSED_PORT1}:$ELASTIC_PORT1"
+      - "$ELASTIC_EXPOSED_PORT2:${ELASTIC_PORT2}"
     volumes:
-      - type: bind
-        source: ./elasticsearch/config/elasticsearch.yml
-        target: /usr/share/elasticsearch/config/elasticsearch.yml
-        read_only: true
+      # - type: bind
+      #   source: ./elasticsearch/config/elasticsearch.yml
+      #   target: /usr/share/elasticsearch/config/elasticsearch.yml
+      #   read_only: true
       - type: volume
         source: elasticsearch_data
         target: /usr/share/elasticsearch/data
     networks:
       - efk
+    depends_on:
+      - filebeat
 
   kibana:
     image: "${CREATED_IMAGE_NAME_PREFIX}:1"
+    user: kibana
     build:
       context: ./kibana
       args:
         EFK_VERSION: $EFK_VERSION
+        KIBANA_PORT: $KIBANA_PORT
     environment:
       ELASTICSEARCH_URL: http://elasticsearch:9200
     hostname: kibana
-    volumes:
-      - type: bind
-        source: ./kibana/config/kibana.yml
-        target: /usr/share/kibana/config/kibana.yml
-        read_only: true
+    # volumes:
+    #   - type: bind
+    #     source: ./kibana/config/kibana.yml
+    #     target: /usr/share/kibana/config/kibana.yml
+    #     read_only: true
     ports:
-      - "5601:5601"
+      - "$KIBANA_EXPOSED_PORT:$KIBANA_PORT"
     networks:
       - efk
     depends_on:
@@ -50,22 +58,20 @@ services:
   filebeat:
     image: "${CREATED_IMAGE_NAME_PREFIX}:1"
     build:
-      context: filebeat
+      context: ./filebeat
       args:
         EFK_VERSION: $EFK_VERSION
     user: root
     hostname: filebeat
     volumes:
-      - type: bind
-        source: ./filebeat/config/filebeat.yml
-        target: /usr/share/filebeat/filebeat.yml
-        read_only: true
+      # - type: bind
+      #   source: ./filebeat/config/filebeat.yml
+      #   target: /usr/share/filebeat/filebeat.yml
+      #   read_only: true
       - /var/lib/docker:/var/lib/docker:ro
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - efk
-    depends_on:
-      - elasticsearch
 
 volumes:
   elasticsearch_data:
