--- a/docker-compose-files/elasticsearch-kibana-filebeat/elasticsearch/config/elasticsearch.yml
+++ b/docker-compose-files/elasticsearch-kibana-filebeat/elasticsearch/config/elasticsearch.yml
@@ -4,9 +4,10 @@
 #
 cluster.name: "docker-cluster"
 network.host: 0.0.0.0
-# paid feature
+
 ## X-Pack settings
 ## see https://www.elastic.co/guide/en/elasticsearch/reference/current/setup-xpack.html
-# xpack.license.self_generated.type: basic
-# xpack.security.enabled: false
-# xpack.monitoring.collection.enabled: false
+
+xpack.license.self_generated.type: basic
+xpack.security.enabled: false
+xpack.monitoring.collection.enabled: false
