update (docker-compose elasticsearch): development/test mode

--- a/docker-compose-files/elasticsearch/Dockerfile
+++ b/docker-compose-files/elasticsearch/Dockerfile
@@ -8,7 +8,8 @@ COPY ./elasticsearch.yml /usr/share/elasticsearch/config/elasticsearch.yml
 # Add your elasticsearch plugins setup here
 # Example: RUN elasticsearch-plugin install analysis-icu
 # RUN curl -L -O https://artifacts.elastic.co/downloads/beats/metricbeat/metricbeat-7.5.1-x86_64.rpm; rpm -vi metricbeat-7.5.1-x86_64.rpm
-# RUN 
+RUN bin/elasticsearch-keystore
+RUN bin/elasticsearch-setup-passwords auto
 
 EXPOSE ${ELASTIC_PORT1}
 EXPOSE ${ELASTIC_PORT2}
