update (docker-compose redis): add env
you can start Redis without a password.

--- a/docker-compose-files/redis/docker-compose1.yml
+++ b/docker-compose-files/redis/docker-compose1.yml
@@ -7,4 +7,5 @@ services:
     ports:
       - 6379:6379
     environment:
+      # - ALLOW_EMPTY_PASSWORD=yes
       - REDIS_PASSWORD=&gBB\zvx/\02n_1Dali
