--- a/docker-compose-files/EFK-filebeat/.env
+++ b/docker-compose-files/EFK-filebeat/.env
@@ -5,6 +5,8 @@ EFK_VERSION=7.5.1
 KIBANA_PORT=5601
 KIBANA_EXPOSED_PORT=5601
 
+ELASTICSEARCH_PASSWORD=changeme
+
 ELASTIC_PORT1=9200
 ELASTIC_PORT2=9300
 ELASTIC_EXPOSED_PORT1=9200
