add: .gitignore, .env, and volume

--- a/docker-compose-files/mongodb/docker-compose1.yml
+++ b/docker-compose-files/mongodb/docker-compose1.yml
@@ -2,16 +2,13 @@ version: "3.7"
 
 services:
   mongo:
-    image: bitnami/mongodb:4.4-debian-10
-    container_name: test_mongo
+    image: mongo:4
+    container_name: mongodump-primary-db
     hostname: mongo111hostname
     ports:
       - 27018:27017
-    environment:
-      - MONGODB_USERNAME=user
-      - MONGODB_PASSWORD=123456789
-      - MONGODB_DATABASE=testdb
-      # - MONGODB_ADVERTISED_HOSTNAME=mongo
-      # - MONGODB_REPLICA_SET_MODE=primary
-      # - MONGODB_REPLICA_SET_KEY=nieiorn4secretkey
-      - MONGODB_ROOT_PASSWORD=1234567890
+    volumes:
+      - mongodump
+
+volumes:
+  mongodump:
