pass .env from docker-compose

--- a/docker-compose-files/mongodb-dockerfile-compose/.env.example
+++ b/docker-compose-files/mongodb-dockerfile-compose/.env.example
@@ -7,3 +7,4 @@ MONGODB_INITDB_ROOT_USERNAME=root
 MONGODB_INITDB_ROOT_PASSWORD=password
 
 ONLINE_MONGODB_URI=mongodb+srv://user:pass@test.domain.mongodb.net/db-name
+ONLINE_MONGODB_DATABASE=ss-new-app`
