--- a/docker-compose-files/mongodb-dockerfile-compose/Dockerfile
+++ b/docker-compose-files/mongodb-dockerfile-compose/Dockerfile
@@ -1,6 +1,9 @@
+ARG ONLINE_MONGODB_URI
+ARG MONGODB_DATABASE
+ARG ONLINE_MONGODB_DATABASE
+
 FROM mongo:4
 
-RUN printenv
-RUN echo $ONLINE_MONGODB_URI $MONGODB_DATABASE;
-RUN mongodump --uri $ONLINE_MONGODB_URI
-RUN mongorestore  /dump/$ONLINE_MONGODB_DATABASE -d $ONLINE_MONGODB_DATABASE
+RUN echo ${ONLINE_MONGODB_URI} ${MONGODB_DATABASE};
+RUN mongodump --uri ${ONLINE_MONGODB_URI}
+RUN mongorestore  /dump/${ONLINE_MONGODB_DATABASE} -d ${ONLINE_MONGODB_DATABASE}
