update (docker-compose): mongodb-cluster does not work

--- a/docker-compose-files/mongodb-dockerfile-compose/Dockerfile
+++ b/docker-compose-files/mongodb-dockerfile-compose/Dockerfile
@@ -1,8 +1,10 @@
-ARG ONLINE_MONGODB_URI
-ARG MONGODB_DATABASE
-ARG ONLINE_MONGODB_DATABASE
-
 FROM mongo:4
+
+COPY .env .
+RUN whoami
+RUN export $(xargs /.env)
+RUN printenv
+RUN rm /.env
 
 RUN echo ${ONLINE_MONGODB_URI} ${MONGODB_DATABASE};
 RUN mongodump --uri ${ONLINE_MONGODB_URI}
