fix (docker-compose pgadmin): network issue

--- a/docker-compose-files/postgres-pgadmin/docker-compose.yml
+++ b/docker-compose-files/postgres-pgadmin/docker-compose.yml
@@ -28,6 +28,8 @@ services:
       - ./.pgadmin.env
     ports:
       - "${PGADMIN_EXPOSED_PORT}:80"
+    networks:
+      - postgres
 
 networks:
   postgres:
