--- a/docker-compose-files/ELK/.github/workflows/mlc_config.json
+++ b/docker-compose-files/ELK/.github/workflows/mlc_config.json
@@ -1,5 +1,3 @@
 {
-  "ignorePatterns": [
-    { "pattern": "^http:\/\/localhost:" }
-  ]
+  "ignorePatterns": [{ "pattern": "^http://localhost:" }]
 }
