--- a/docker-compose-files/rabbitmq/docker-compose.yml
+++ b/docker-compose-files/rabbitmq/docker-compose.yml
@@ -1,19 +1,23 @@
-version: "3"
+version: "3.8"
 
 services:
   rabbitmq:
-    image: rabbitmq:3-management
-    restart: always
+    image: rabbitmq:3.9.20-management-alpine
+    env_file:
+      - .rabbitmq.env
     ports:
-      - '5672:5672'
-      - '15672:15672'
-    environment:
-      RABBITMQ_DEFAULT_USER: admin
-      RABBITMQ_DEFAULT_PASS: change-me
+      - 5672:5672
+      - 15672:15672
+    restart: always
     container_name: rabbitmq
-#    healthcheck:
-#      test: ["CMD", "curl", "-f", "http://localhost:15672"]
-#      interval: 30s
-#      timeout: 10s
-#      retries: 5
+    hostname: rabbitmq
+    volumes:
+      - rabbitmq:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:15672"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
+volumes:
+  rabbitmq:
