--- a/docker-compose-files/mongodb-cluster/bitnami/cluster/.env.example
+++ b/docker-compose-files/mongodb-cluster/bitnami/cluster/.env.example
@@ -1,4 +1,9 @@
-MONGODB_USERNAME=user
-MONGODB_PASSWORD=pass
-MONGODB_REPLICA_SET_KEY=replica-set-key
+MONGODB_USERNAME=docker
+MONGODB_PASSWORD=student
+
+# Greater than 5 characters 
+# Should not contain any special characters
+MONGODB_REPLICA_SET_KEY=replicaSetKey
+
+MONGODB_ROOT_USER=root
 MONGODB_ROOT_PASSWORD=root-password
