--- a/docker-compose-files/mongodb-cluster/bitnami/cluster/docker-compose.yaml
+++ b/docker-compose-files/mongodb-cluster/bitnami/cluster/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   primary-mongodb:
-    image: "bitnami/mongodb:4.4-debian-10"
+    image: bitnami/mongodb:4.4-debian-10
     restart: always
     ports:
       - "27018:27017"
@@ -11,36 +11,45 @@ services:
     environment:
       MONGODB_ADVERTISED_HOSTNAME: primary-mongodb
       MONGODB_REPLICA_SET_MODE: primary
+      # MONGODB_REPLICA_SET_NAME: replicaset
+      # MONGODB_PORT_NUMBER: 27017
     env_file:
       - .env
-    container_name: inifiniti-primary-database
+      - .shared.env
+    container_name: primary-database
     depends_on:
       - secondary-mongodb
       - arbiter-mongodb
 
   secondary-mongodb:
-    image: "bitnami/mongodb:4.4-debian-10"
+    image: bitnami/mongodb:4.4-debian-10
     ports:
       - "27020:27017"
     environment:
       MONGODB_ADVERTISED_HOSTNAME: secondary-mongodb
       MONGODB_REPLICA_SET_MODE: secondary
+      # MONGODB_REPLICA_SET_NAME: replicaset
+      # MONGODB_PORT_NUMBER: 27017
     volumes:
       - mongodb-secondary_data:/bitnami/mongodb
     env_file:
-      - .env.cluster
-    container_name: inifiniti-secondary-database
+      - .cluster.env
+      - .shared.env
+    container_name: secondary-database
 
   arbiter-mongodb:
-    image: "bitnami/mongodb:4.4-debian-10"
+    image: bitnami/mongodb:4.4-debian-10
     environment:
       MONGODB_ADVERTISED_HOSTNAME: arbiter-mongodb
       MONGODB_REPLICA_SET_MODE: arbiter
+      # MONGODB_REPLICA_SET_NAME: replicaset
+      # MONGODB_PORT_NUMBER: 27017
     volumes:
       - mongodb-arbiter_data:/bitnami/mongodb
     env_file:
-      - .env.cluster
-    container_name: inifiniti-arbiter-database
+      - .cluster.env
+      - .shared.env
+    container_name: arbiter-database
 
 volumes:
   mongodb-primary_data:
