fix(docker-compose): connection refused error

--- a/docker-compose-files/postgres-pgadmin/.env.example
+++ b/docker-compose-files/postgres-pgadmin/.env.example
@@ -1,3 +1,7 @@
 COMPOSE_PROJECT_NAME=postgre_pgadmin
 POSTGRESQL_EXPOSED_PORT=5432
 PGADMIN_EXPOSED_PORT=5050
+POSTGRES_PASSWORD=change-me
+POSTGRES_USER=postgres
+POSTGRES_DB=db-name
+PGDATA=/var/lib/postgresql/data/pgdata
