--- a/docker-compose-files/postgres-pgadmin/docker-compose.yml
+++ b/docker-compose-files/postgres-pgadmin/docker-compose.yml
@@ -9,22 +9,15 @@ services:
     volumes:
       - /data/postgres:/data/postgres
     env_file:
-      - .postgresql.env
-    networks:
-      - postgres
+      - .env
 
   pgAdmin:
-    image: dpage/pgadmin4:6.5
+    image: dpage/pgadmin4:8.1
     restart: always
     depends_on:
       - postgres
-    env_file:
-      - ./.pgadmin.env
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
     ports:
       - "${PGADMIN_EXPOSED_PORT}:80"
-    networks:
-      - postgres
-
-networks:
-  postgres:
-    driver: bridge
