--- a/docker-compose-files/postgres-pgadmin/.pgadmin.env.example
+++ b/docker-compose-files/postgres-pgadmin/.pgadmin.env.example
@@ -1,2 +1,2 @@
-PGADMIN_DEFAULT_EMAIL=temp@gmail.com
-PGADMIN_DEFAULT_PASSWORD=123
+PGADMIN_DEFAULT_PASSWORD=admin
+PGADMIN_DEFAULT_EMAIL=admin@admin.com
