--- a/docker-compose-files/postgres-pgadmin/.env.example
+++ b/docker-compose-files/postgres-pgadmin/.env.example
@@ -1,3 +1,8 @@
 PGADMIN_EXPOSED_PORT=5050
 POSTGRESQL_EXPOSED_PORT=5432
 COMPOSE_PROJECT_NAME=postgre_pgadmin
+POSTGRES_PASSWORD=change-me
+POSTGRES_USER=username
+PGUSER=username
+POSTGRES_DB=db-name
+PGDATA=/var/lib/postgresql/data/pgdata
