--- a/docker-compose-files/postgres-pgadmin/docker-compose.yml
+++ b/docker-compose-files/postgres-pgadmin/docker-compose.yml
@@ -9,22 +9,20 @@ services:
     volumes:
       - /data/postgres:/data/postgres
     env_file:
-      - .postgresql.env
-    networks:
-      - postgres
+      - .env
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U username"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   pgAdmin:
     image: dpage/pgadmin4:6.5
     restart: always
     depends_on:
       - postgres
-    env_file:
-      - ./.pgadmin.env
+    environment:
+      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
     ports:
       - "${PGADMIN_EXPOSED_PORT}:80"
-    networks:
-      - postgres
-
-networks:
-  postgres:
-    driver: bridge
