--- a/docker-compose-files/fusionauth-kickstart/docker-compose.yml
+++ b/docker-compose-files/fusionauth-kickstart/docker-compose.yml
@@ -3,20 +3,21 @@ version: "3"
 services:
   db:
     image: postgres:12.14
-    restart: always
     environment:
       PGDATA: /var/lib/postgresql/data/pgdata
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      PGUSER: ${POSTGRES_USER} # instead of `-U postgres` in healthcheck
+    # restart: always
+    # networks:
+    #   - db_net
+    # volumes:
+    #   - db_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready"]
       interval: 5s
       timeout: 5s
       retries: 5
-    networks:
-      - db_net
-    volumes:
-      - db_data:/var/lib/postgresql/data
 
   search:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.0
@@ -41,15 +42,15 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
-    networks:
-      - search_net
-    restart: unless-stopped
+    # restart: unless-stopped
+    # networks:
+    #   - search_net
+    # volumes:
+    #   - search_data:/usr/share/elasticsearch/data
     ulimits:
       memlock:
         soft: -1
         hard: -1
-    volumes:
-      - search_data:/usr/share/elasticsearch/data
 
   fusionauth:
     image: fusionauth/fusionauth-app:1.45.3
@@ -70,33 +71,32 @@ services:
       FUSIONAUTH_APP_URL: http://fusionauth:9012
       SEARCH_SERVERS: http://search:9200
       SEARCH_TYPE: elasticsearch
+    ports:
+      - 9012:9011
+    # restart: unless-stopped
+    # networks:
+    #   - db_net
+    #   - search_net
+    volumes:
+      - ./kickstart:/usr/local/fusionauth/kickstart
+      # - fusionauth_config:/usr/local/fusionauth/config
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:9012/api/status"]
       interval: 5s
       timeout: 5s
       retries: 5
-    networks:
-      - db_net
-      - search_net
-    restart: unless-stopped
-    ports:
-      - 9012:9011
-    volumes:
-      - fusionauth_config:/usr/local/fusionauth/config
-      - ./kickstart:/usr/local/fusionauth/kickstart
 
   mailcatcher:
     image: sj26/mailcatcher:v0.8.2
     ports:
       - "1021:1025"
       - "1081:1080"
-networks:
-  db_net:
-    driver: bridge
-  search_net:
-    driver: bridge
-
-volumes:
-  db_data:
-  fusionauth_config:
-  search_data:
+# networks:
+#   db_net:
+#     driver: bridge
+#   search_net:
+#     driver: bridge
+# volumes:
+#   db_data:
+#   fusionauth_config:
+#   search_data:
