fix: nodejs and mongo-express can connect to mongodb

--- a/docker-compose-files/mongodb/.env.example
+++ b/docker-compose-files/mongodb/.env.example
@@ -1,5 +1,5 @@
 PORT=3000
-DATABASE_URL=mongodb://user:pass@0.0.0.0:27017/dbname
+DATABASE_URL=mongodb://user:password@mongo:27017
 
 MONGO_INITDB_DATABASE=dbname
 MONGO_INITDB_ROOT_USERNAME=user
