--- a/docker-compose-files/fusionauth-terraform/docker-compose.yml
+++ b/docker-compose-files/fusionauth-terraform/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services:
   db:
     image: postgres:12.14
+    container_name: fusionauth-db
     environment:
       PGDATA: /var/lib/postgresql/data/pgdata
       POSTGRES_USER: ${POSTGRES_USER}
@@ -21,6 +22,7 @@ services:
 
   search:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.0
+    container_name: fusionauth-search-engine
     environment:
       cluster.name: fusionauth
       bootstrap.memory_lock: "true"
@@ -53,7 +55,11 @@ services:
         hard: -1
 
   fusionauth:
-    image: fusionauth/fusionauth-app:1.45.3
+    image: fusionauth-image
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: fusionauth-container
     depends_on:
       db:
         condition: service_healthy
@@ -69,11 +75,11 @@ services:
       # Could not find a way to create super admin and default apiKey in terrafrom or any other mean, so just used the old kickstart.json file
       FUSIONAUTH_APP_KICKSTART_FILE: /usr/local/fusionauth/kickstart.json
       FUSIONAUTH_APP_RUNTIME_MODE: development
-      FUSIONAUTH_APP_URL: http://fusionauth:9012
+      FUSIONAUTH_APP_URL: http://fusionauth:9011
       SEARCH_SERVERS: http://search:9200
       SEARCH_TYPE: elasticsearch
     ports:
-      - 9012:9011
+      - 9011:9011
     # restart: unless-stopped
     # networks:
     #   - db_net
@@ -83,15 +89,16 @@ services:
       # Could not find a way to create super admin and default apiKey in terrafrom or any other mean, so just used the old kickstart.json file
       - ./kickstart.json:/usr/local/fusionauth/kickstart.json
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:9012/api/status"]
+      test: ["CMD-SHELL", "curl -f http://localhost:9011/api/status"]
       interval: 5s
       timeout: 5s
       retries: 5
 
   mailcatcher:
     image: sj26/mailcatcher:v0.8.2
+    container_name: fusionauth-smtp
     ports:
-      - "1021:1025"
+      - "1026:1025"
       - "1081:1080"
 # networks:
 #   db_net:
