chore: wip -- run with nodemon to debug faster

--- a/docker-compose-files/fusionauth-nodejs/docker-compose.yml
+++ b/docker-compose-files/fusionauth-nodejs/docker-compose.yml
@@ -6,7 +6,13 @@ services:
     container_name: api-container
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: dev.Dockerfile
+    volumes:
+      - type: bind
+        source: .
+        target: /app
+        volume:
+          nocopy: true
     ports:
       - 3000:3000
     env_file:
