--- a/docker-compose-files/fusionauth-nodejs/package.json
+++ b/docker-compose-files/fusionauth-nodejs/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "dev": "nodemon index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,8 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.27",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   }
 }
