chore: wip -- curl works but nodejs app receives ECONNREFUSED

--- a/docker-compose-files/fusionauth-nodejs/docker-compose.yml
+++ b/docker-compose-files/fusionauth-nodejs/docker-compose.yml
@@ -48,6 +48,10 @@ services:
       bootstrap.memory_lock: "true"
       discovery.type: single-node
       ES_JAVA_OPTS: ${ES_JAVA_OPTS}
+      xpack.security.enabled: "false" # https://stackoverflow.com/a/60873733/8784518
+    # ports:
+    #   - 9200:9200
+    #   - 9300:9300
     healthcheck:
       test:
         [
