--- a/docker-compose-files/mongodb-cluster/bitnami/cluster/compose.yaml
+++ b/docker-compose-files/mongodb-cluster/bitnami/cluster/compose.yaml
@@ -1,12 +1,10 @@
-version: "3.7"
-
 services:
   primary-mongodb:
-    image: bitnami/mongodb:4.4-debian-10
+    image: bitnami/mongodb:7.0.12-debian-12-r2
+    restart: unless-stopped
     hostname: mongo
-    restart: always
     ports:
-      - "27017:27017"
+      - "27017:27017/tcp"
     volumes:
       - mongodb-primary_data:/bitnami/mongodb
     environment:
@@ -23,7 +21,7 @@ services:
       - arbiter-mongodb
 
   secondary-mongodb:
-    image: bitnami/mongodb:4.4-debian-10
+    image: bitnami/mongodb:7.0.12-debian-12-r2
     environment:
       MONGODB_ADVERTISED_HOSTNAME: secondary-mongodb
       MONGODB_REPLICA_SET_MODE: secondary
@@ -37,7 +35,7 @@ services:
     container_name: secondary-database
 
   arbiter-mongodb:
-    image: bitnami/mongodb:4.4-debian-10
+    image: bitnami/mongodb:7.0.12-debian-12-r2
     environment:
       MONGODB_ADVERTISED_HOSTNAME: arbiter-mongodb
       MONGODB_REPLICA_SET_MODE: arbiter
