fix: test stripe with mockserver

--- a/docker-compose-files/mockserver-integration-test/compose.yaml
+++ b/docker-compose-files/mockserver-integration-test/compose.yaml
@@ -4,5 +4,6 @@ services:
     restart: on-failure:3
     ports:
       - 1080:1080
-    volumes:
-      - ./mockserver.properties:/config/mockserver.properties
+    # volumes:
+    #   # chmod o+r $(pwd)/mockserver.properties
+    #   - ./mockserver.properties:/config/mockserver.properties
