--- a/docker-compose-files/mongodb/mongodb-cluster/single-node-cluster/compose.yaml
+++ b/docker-compose-files/mongodb/mongodb-cluster/single-node-cluster/compose.yaml
@@ -36,6 +36,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    env_file: .env
     command: >
       mongosh --username ${MONGO_INITDB_ROOT_USERNAME} --password ${MONGO_INITDB_ROOT_PASSWORD} --host db:27017 --eval
       '
