chore: add zookeeper manager

--- a/docker-compose-files/kafka/compose.yaml
+++ b/docker-compose-files/kafka/compose.yaml
@@ -20,3 +20,11 @@ services:
       nofile:
         soft: 65536
         hard: 65536
+
+  kafka-manager:
+    build: .
+    depends_on:
+      kafka:
+        condition: service_started
+      zookeeper:
+        condition: service_started
