--- a/docker-compose-files/kafka/compose.yaml
+++ b/docker-compose-files/kafka/compose.yaml
@@ -5,11 +5,17 @@ services:
       - 9092:9092
     depends_on:
       zookeeper:
-        condition: service_started
+        condition: service_healthy
     env_file: .env
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./jaas.conf:/app/config/jaas.conf
+    healthcheck:
+      test:
+        ["CMD", "kafka-topics.sh", "--list", "--zookeeper", "zookeeper:2181"]
+      interval: 30s
+      timeout: 30s
+      retries: 4
 
   zookeeper:
     image: wurstmeister/zookeeper
@@ -20,11 +26,16 @@ services:
       nofile:
         soft: 65536
         hard: 65536
+    healthcheck:
+      test: ["CMD-SHELL", "echo ruok | nc -w 2 zookeeper 2181"]
+      interval: 5s
+      timeout: 10s
+      retries: 3
 
   kafka-manager:
     build: .
     depends_on:
       kafka:
-        condition: service_started
+        condition: service_healthy
       zookeeper:
-        condition: service_started
+        condition: service_healthy
