chore: kafka creates topics + assign id to each broker with env

--- a/docker-compose-files/kafka/.env.example
+++ b/docker-compose-files/kafka/.env.example
@@ -8,3 +8,5 @@ KAFKA_INTER_BROKER_LISTENER_NAME=SASL_PLAINTEXT
 KAFKA_ADVERTISED_LISTENERS=SASL_PLAINTEXT://kafka:9092
 KAFKA_SASL_MECHANISM_INTER_BROKER_PROTOCOL=SCRAM-SHA-256
 KAFKA_OPTS="-Djava.security.auth.login.config=/app/config/jaas.conf"
+KAFKA_BROKER_ID=1
+KAFKA_CREATE_TOPICS="topic-name:3:1"
