chore: add KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR

--- a/docker-compose-files/kafka/.env.example
+++ b/docker-compose-files/kafka/.env.example
@@ -10,3 +10,4 @@ KAFKA_SASL_MECHANISM_INTER_BROKER_PROTOCOL=SCRAM-SHA-256
 KAFKA_OPTS="-Djava.security.auth.login.config=/app/config/jaas.conf"
 KAFKA_BROKER_ID=1
 KAFKA_CREATE_TOPICS="topic-name:3:1"
+KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
