--- a/docker-compose-files/postgres/postgres-pgadmin/compose.host.yml
+++ b/docker-compose-files/postgres/postgres-pgadmin/compose.host.yml
@@ -1,8 +1,6 @@
-version: "3.7"
-
 services:
   postgres:
-    image: postgres:13
+    image: postgres:17.0-alpine3.20
     restart: always
     volumes:
       - postgres:/data/postgres
