--- a/docker-compose-files/postgres/postgres-pgadmin/compose.yml
+++ b/docker-compose-files/postgres/postgres-pgadmin/compose.yml
@@ -1,8 +1,6 @@
-version: "3.7"
-
 services:
   postgres:
-    image: postgres:13
+    image: postgres:17.0-alpine3.20
     restart: always
     ports:
       - "${POSTGRESQL_EXPOSED_PORT}:5432"
