--- a/docker-compose-files/postgres/postgres-pgadmin/compose.yml
+++ b/docker-compose-files/postgres/postgres-pgadmin/compose.yml
@@ -18,7 +18,8 @@ services:
     image: dpage/pgadmin4:8.1
     restart: always
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: admin
