--- a/docker-compose-files/postgres/postgresql/compose.yml
+++ b/docker-compose-files/postgres/postgresql/compose.yml
@@ -7,6 +7,11 @@ services:
       - "${POSTGRESQL_EXPOSED_PORT}:5432"
     env_file:
       - .postgresql.env
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     networks:
       - postgres
     # volumes:
