--- a/docker-compose-files/postgres/postgres-pgadmin/compose.host.yml
+++ b/docker-compose-files/postgres/postgres-pgadmin/compose.host.yml
@@ -14,7 +14,7 @@ services:
       retries: 5
 
   pgAdmin:
-    image: dpage/pgadmin4:6.5
+    image: dpage/pgadmin4:8.12
     restart: always
     depends_on:
       - postgres
@@ -22,6 +22,9 @@ services:
       PGADMIN_DEFAULT_PASSWORD: admin
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
     network_mode: host
+    volumes:
+      - ./servers.json:/tmp/servers.json
+      - ./preferences.json:/tmp/preferences.json
 
 volumes:
   postgres:
