--- a/docker-compose-files/postgres/postgres-pgadmin/compose.yml
+++ b/docker-compose-files/postgres/postgres-pgadmin/compose.yml
@@ -25,3 +25,6 @@ services:
       PGADMIN_DEFAULT_PASSWORD: admin
     ports:
       - "${PGADMIN_EXPOSED_PORT}:80"
+    volumes:
+      - ./conf/servers.json:/tmp/servers.json
+      - ./conf/preferences.json:/tmp/preferences.json
